--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
+Version 0.9.2
+  * compare revision of the tag with HEAD to decide a existing tag 
+
 Version 0.9.1
- * set environment variable LC_COLLATE to use a single sort order regardless
- * of environment
+  * set environment variable LC_COLLATE to use a single sort order regardless
+  * of environment
 
 Version 0.9.0
   * added meta packages
